lessons/083/example-4/2-prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - prometheus-v3.devopsbyexample.io
    secretName: prometheus-v3-devopsbyexample-io-key-pair
  rules:
  - host: prometheus-v3.devopsbyexample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
